WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208791
CAN_SECURELY_ARCHIVE_FILE_WRAPPER incorrectly excludes watchOS and tvOS
https://bugs.webkit.org/show_bug.cgi?id=208791
Summary
CAN_SECURELY_ARCHIVE_FILE_WRAPPER incorrectly excludes watchOS and tvOS
Wenson Hsieh
Reported
2020-03-08 15:16:54 PDT
SSIA
Attachments
Patch
(3.90 KB, patch)
2020-03-08 15:30 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Just remove CAN_SECURELY_ARCHIVE_FILE_WRAPPER
(3.17 KB, patch)
2020-03-08 17:42 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-03-08 15:30:46 PDT
Comment hidden (obsolete)
Created
attachment 392994
[details]
Patch
Alexey Proskuryakov
Comment 2
2020-03-08 17:36:37 PDT
Comment on
attachment 392994
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=392994&action=review
> Source/WTF/wtf/PlatformUse.h:327 > +#if PLATFORM(IOS_FAMILY) || (PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 101400)
macOS version check is also unnecessary, PLATFORM(COCOA) is enough.
Wenson Hsieh
Comment 3
2020-03-08 17:38:31 PDT
Comment on
attachment 392994
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=392994&action=review
>> Source/WTF/wtf/PlatformUse.h:327 >> +#if PLATFORM(IOS_FAMILY) || (PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 101400) > > macOS version check is also unnecessary, PLATFORM(COCOA) is enough.
Ah, I didn’t realize we don’t build for macOS 10.13 updates anymore. In that case, since this only affects Cocoa code (APIAttachmentCocoa.mm), I think the right thing to do is to simply remove the !CAN_SECURELY_ARCHIVE_FILE_WRAPPER codepath.
Wenson Hsieh
Comment 4
2020-03-08 17:42:12 PDT
Created
attachment 393003
[details]
Just remove CAN_SECURELY_ARCHIVE_FILE_WRAPPER
WebKit Commit Bot
Comment 5
2020-03-08 20:35:23 PDT
Comment on
attachment 393003
[details]
Just remove CAN_SECURELY_ARCHIVE_FILE_WRAPPER Clearing flags on attachment: 393003 Committed
r258128
: <
https://trac.webkit.org/changeset/258128
>
WebKit Commit Bot
Comment 6
2020-03-08 20:35:25 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2020-03-08 20:36:15 PDT
<
rdar://problem/60209784
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug