CAN_SECURELY_ARCHIVE_FILE_WRAPPER incorrectly excludes watchOS and tvOS https://bugs.webkit.org/show_bug.cgi?id=208791

Reviewed by Tim Horton.

This is one of several places where a __IPHONE_OS_VERSION_MIN_REQUIRED check unintentionally caused a compiler
flag to not be defined on watchOS, when it really should apply to all iOS family targets. Now that we don't
care about building for any iOS family targets aligned with iOS 11 or prior, and also don't build for 10.13 and
prior, we can simply remove the !CAN_SECURELY_ARCHIVE_FILE_WRAPPER codepath.

* UIProcess/API/Cocoa/APIAttachmentCocoa.mm:
(API::Attachment::createSerializedRepresentation const):
(API::Attachment::updateFromSerializedRepresentation):


Canonical link: https://commits.webkit.org/221735@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258128 268f45cc-cd09-0410-ab3c-d52691b4dbfc